// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SSOFields/> Editable mode 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-image fa-w-16 fa-6x "
          color="#DCDCDC"
          data-icon="image"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 448H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h416c26.51 0 48 21.49 48 48v288c0 26.51-21.49 48-48 48zM112 120c-30.928 0-56 25.072-56 56s25.072 56 56 56 56-25.072 56-56-25.072-56-56-56zM64 384h384V272l-87.515-87.515c-4.686-4.686-12.284-4.686-16.971 0L208 320l-55.515-55.515c-4.686-4.686-12.284-4.686-16.971 0L64 336v48z"
            fill="currentColor"
            style={{}}
          />
        </svg>
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_header_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload1"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload1"
                    multiple={false}
                    name="fileUpload1"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-image fa-w-16 fa-6x "
          color="#DCDCDC"
          data-icon="image"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 448H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h416c26.51 0 48 21.49 48 48v288c0 26.51-21.49 48-48 48zM112 120c-30.928 0-56 25.072-56 56s25.072 56 56 56 56-25.072 56-56-25.072-56-56-56zM64 384h384V272l-87.515-87.515c-4.686-4.686-12.284-4.686-16.971 0L208 320l-55.515-55.515c-4.686-4.686-12.284-4.686-16.971 0L64 336v48z"
            fill="currentColor"
            style={{}}
          />
        </svg>
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_login_page_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload2"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload2"
                    multiple={false}
                    name="fileUpload2"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
]
`;

exports[`<SSOFields/> No images attached 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-image fa-w-16 fa-6x "
          color="#DCDCDC"
          data-icon="image"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 448H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h416c26.51 0 48 21.49 48 48v288c0 26.51-21.49 48-48 48zM112 120c-30.928 0-56 25.072-56 56s25.072 56 56 56 56-25.072 56-56-25.072-56-56-56zM64 384h384V272l-87.515-87.515c-4.686-4.686-12.284-4.686-16.971 0L208 320l-55.515-55.515c-4.686-4.686-12.284-4.686-16.971 0L64 336v48z"
            fill="currentColor"
            style={{}}
          />
        </svg>
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_header_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload1"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload1"
                    multiple={false}
                    name="fileUpload1"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div
        className="sso-fields__null-image"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-image fa-w-16 fa-6x "
          color="#DCDCDC"
          data-icon="image"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 448H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h416c26.51 0 48 21.49 48 48v288c0 26.51-21.49 48-48 48zM112 120c-30.928 0-56 25.072-56 56s25.072 56 56 56 56-25.072 56-56-25.072-56-56-56zM64 384h384V272l-87.515-87.515c-4.686-4.686-12.284-4.686-16.971 0L208 320l-55.515-55.515c-4.686-4.686-12.284-4.686-16.971 0L64 336v48z"
            fill="currentColor"
            style={{}}
          />
        </svg>
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_login_page_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload2"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload2"
                    multiple={false}
                    name="fileUpload2"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
]
`;

exports[`<SSOFields/> View-only mode 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder--view-only"
    >
      <div
        className="sso-fields__null-image"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-image fa-w-16 fa-6x "
          color="#DCDCDC"
          data-icon="image"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 448H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h416c26.51 0 48 21.49 48 48v288c0 26.51-21.49 48-48 48zM112 120c-30.928 0-56 25.072-56 56s25.072 56 56 56 56-25.072 56-56-25.072-56-56-56zM64 384h384V272l-87.515-87.515c-4.686-4.686-12.284-4.686-16.971 0L208 320l-55.515-55.515c-4.686-4.686-12.284-4.686-16.971 0L64 336v48z"
            fill="currentColor"
            style={{}}
          />
        </svg>
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder--view-only"
    >
      <div
        className="sso-fields__null-image"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-image fa-w-16 fa-6x "
          color="#DCDCDC"
          data-icon="image"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={{}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M464 448H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h416c26.51 0 48 21.49 48 48v288c0 26.51-21.49 48-48 48zM112 120c-30.928 0-56 25.072-56 56s25.072 56 56 56 56-25.072 56-56-25.072-56-56-56zM64 384h384V272l-87.515-87.515c-4.686-4.686-12.284-4.686-16.971 0L208 320l-55.515-55.515c-4.686-4.686-12.284-4.686-16.971 0L64 336v48z"
            fill="currentColor"
            style={{}}
          />
        </svg>
        <div
          className="sso-fields__null-image__text"
        >
          None selected
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<SSOFields/> With images attached 1`] = `
[
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Page Header Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div>
        <div>
          <img
            alt="Sign in"
            className="sso-fields__image__header-logo"
            onError={[Function]}
            src="imgURLHeader"
          />
        </div>
        <div
          className="sso-fields__delete-img-div"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times-circle fa-w-16 sso-fields__delete-img--header-logo sso-fields__delete-img clickable"
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={{}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
              style={{}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_header_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload1"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload1"
                    multiple={false}
                    name="fileUpload1"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
  <div
    className="sso-fields__spacer"
  />,
  <div
    className="sso-logo-pane-container"
  >
    <div
      className="sso-fields__label"
    >
      Login Page Logo
    </div>
    <div
      className="sso-fields__image-holder"
    >
      <div>
        <div>
          <img
            alt="Sign in"
            className="sso-fields__image__page-logo"
            onError={[Function]}
            src="imgURLLogin"
          />
        </div>
        <div
          className="sso-fields__delete-img-div"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-times-circle fa-w-16 sso-fields__delete-img--page-logo sso-fields__delete-img clickable"
            data-icon="times-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={{}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
              fill="currentColor"
              style={{}}
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="sso-fields__file-attachment"
      id="auth_login_page_logo"
    >
      <span
        className="translator--toggle__wizard"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              className="wizard-row--container"
            >
              <div
                className=""
              >
                <div
                  className="file-upload--container block"
                >
                  <label
                    className="file-upload--label"
                    htmlFor="fileUpload2"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                  >
                    <i
                      aria-hidden="true"
                      className="fa fa-cloud-upload fa-2x cloud-logo"
                    />
                    Select file or drag and drop here.
                  </label>
                  <input
                    accept=".jpg,.jpeg,.png,.gif,.tif"
                    className="file-upload--input"
                    id="fileUpload2"
                    multiple={false}
                    name="fileUpload2"
                    onChange={[Function]}
                    type="file"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </div>
  </div>,
]
`;
